--- a/backend-hapi/package.json
+++ b/backend-hapi/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@hapi/hapi": "^21.4.0",
+    "@hapi/inert": "^7.1.0",
     "@hapi/jwt": "^3.2.0",
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
